packages/parser/test/parser/E0106-map-expression.txt
a := { "key1": "value" "key2": "value2" }
===== err =====
anonymous:1:23: ParseError: E0106 - Expected comma after map expression element
1 | a := { "key1": "value" "key2": "value2" }
  |                       ^
